# tiny-sort-rs

./: Cargo.toml  README.md  publish.sh
.github/workflows/: rust.yml
src/: lib.rs  stable.rs  unstable.rs
tests/: stable.rs  unstable.rs
