[package]
name = "tiny_sort"
version = "0.1.0"
edition = "2018"
authors = ["Lukas Bergdoll <lukas.bergdoll@gmail.com>"]

[dependencies]

[dev-dependencies]
sort_test_tools = { git = "https://github.com/Voultapher/sort-research-rs", rev = "ac65d17cdd1bfac2ea076fffa31f081d6d3452e2", default-features = false }

[features]
default = ["stable", "unstable", "large_test_sizes"]

# Enable the stable sort.
stable = []

# Enable the unstable sort.
unstable = []

large_test_sizes = ["sort_test_tools/large_test_sizes"]
