[package]
name = "tiny_sort"
version = "0.1.0"
edition = "2018"
authors = ["Lukas Bergdoll <lukas.bergdoll@gmail.com>"]

[dependencies]

[dev-dependencies]
sort_test_tools = { git = "https://github.com/Voultapher/sort-research-rs", rev = "5e07fb6ebb61920ff9f5e896badd88502fe40e35", default-features = false }

[features]
default = ["stable", "unstable", "large_test_sizes"]

# Enable the stable sort.
stable = []

# Enable the unstable sort.
unstable = []

large_test_sizes = ["sort_test_tools/large_test_sizes"]
